fix(templates): remove linebreaks from links in transactionals so mandrill can convert them to plaintext properly

--- a/packages/backend-modules/mail/templates/access_recipient_dialog_kampa202202.html
+++ b/packages/backend-modules/mail/templates/access_recipient_dialog_kampa202202.html
@@ -46,17 +46,10 @@
                       Was hat der Krieg in der Ukraine mit dem globalen Kampf
                       gegen die Klimakrise zu tun? Republik-Autor Elia Blülle
                       hat vor kurzem
-                      <a
-                        href="{{frontend_base_url}}/2022/03/25/putin-klimakrise"
-                        >davor gewarnt</a
-                      >, dass die steigenden Energiepreise gefährliche
+                      <a href="{{frontend_base_url}}/2022/03/25/putin-klimakrise">davor gewarnt</a>, dass die steigenden Energiepreise gefährliche
                       ökonomische und politische Effekte haben könnten. Ein
                       Verleger entgegnete,
-                      <a
-                        href="{{frontend_base_url}}/dialog?t=article&amp;id=6d27480c-2ac7-4e75-a4a6-6776f9c81d6d&amp;focus=810e3bf1-6f64-489a-a00c-c53fa5437b23"
-                        >dass ebendieser Preisdruck die Energiewende vielleicht
-                        auch befördert</a
-                      >.
+                      <a href="{{frontend_base_url}}/dialog?t=article&amp;id=6d27480c-2ac7-4e75-a4a6-6776f9c81d6d&amp;focus=810e3bf1-6f64-489a-a00c-c53fa5437b23">dass ebendieser Preisdruck die Energiewende vielleicht auch befördert</a>.
                     </p>
                     <p>
                       Im Republik-Dialog diskutieren unsere Autorinnen mit
@@ -70,18 +63,12 @@
                       am Artikelende.
                     </p>
                     <p>
-                      <a href="{{link_dialog}}"
-                        >Hier gelangen Sie zu einer Übersicht der neusten
-                        Beiträgen und laufenden Debatten</a
-                      >.
+                      <a href="{{link_dialog}}">Hier gelangen Sie zu einer Übersicht der neusten Beiträgen und laufenden Debatten</a>.
                     </p>
                     <p>
                       Ihnen liegen online geführte Diskussionen nicht? Dann
                       treffen Sie die Crew persönlich:
-                      <a href="{{frontend_base_url}}/gessnerallee"
-                        >Am 23. April zieht unsere Redaktion für einen Tag ins
-                        Zürcher Theater Gessnerallee</a
-                      >
+                      <a href="{{frontend_base_url}}/gessnerallee">Am 23. April zieht unsere Redaktion für einen Tag ins Zürcher Theater Gessnerallee</a>
                       und lädt dort zu Austausch und Debatte. Wir bringen den
                       Journalismus live auf die Bühne, ermöglichen Ihnen aber
                       auch einen Blick hinter die Kulissen und heissen alle
@@ -111,9 +98,7 @@
                       Theaterbar ist den ganzen Tag offen, und für den kleinen
                       Hunger zwischendurch gibt es einen Foodtruck mit fairen
                       Preisen. Hier finden Sie das ganze Programm im Überblick:
-                      <a href="{{frontend_base_url}}/gessnerallee"
-                        >www.republik.ch/gessnerallee</a
-                      >
+                      <a href="{{frontend_base_url}}/gessnerallee">www.republik.ch/gessnerallee</a>
                       – wir würden uns sehr freuen, Sie schon bald zu sehen!
                     </p>
                     <p>
@@ -143,9 +128,7 @@
                       Republik AG<br />
                       Sihlhallenstrasse 1, CH-8004 Zürich<br />
                       <a href="{{frontend_base_url}}">www.republik.ch</a><br />
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
                     </p>
                   </td>
                 </tr>
