--- a/packages/backend-modules/mail/templates/access_recipient_onboarding_kampa202202.html
+++ b/packages/backend-modules/mail/templates/access_recipient_onboarding_kampa202202.html
@@ -114,17 +114,13 @@
                       Wenn Ihnen die Idee hinter unserem Projekt und unser
                       Magazin gefallen, gibt es verschiedene Möglichkeiten, wie
                       auch Sie ein Teil davon werden können:
-                      <a href="{{link_offers_overview}}"
-                        >Auf der Angebotsseite</a
-                      >
+                      <a href="{{link_offers_overview}}">Auf der Angebotsseite</a>
                       finden Sie die Abonnemente und Mitgliedschaften in der
                       Übersicht.
                     </p>
                     <p>
                       Haben Sie Fragen oder brauchen Sie Unterstützung? Unter
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
                       helfen wir Ihnen gerne weiter.
                     </p>
                     <p>
@@ -154,9 +150,7 @@
                       Republik AG<br />
                       Sihlhallenstrasse 1, CH-8004 Zürich<br />
                       <a href="{{frontend_base_url}}">www.republik.ch</a><br />
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
                     </p>
                   </td>
                 </tr>
