--- a/packages/backend-modules/mail/templates/access_recipient_recommendations.html
+++ b/packages/backend-modules/mail/templates/access_recipient_recommendations.html
@@ -51,58 +51,30 @@
                     </p>
                     <p>
                       Die
-                      <a
-                        href="{{frontend_base_url}}/2022/03/07/wie-russland-fuer-den-cyber-krieg-aufgeruestet-hat"
-                        >Analyse zu Russlands Cyber-Krieg gegen die Ukraine</a
-                      >, die
-                      <a
-                        href="{{frontend_base_url}}/2022/03/05/wie-die-schweiz-ihrem-besten-ruf-gerecht-werden-wollte-aber-ihr-schlechtestes-bild-abgab"
-                        >Recherche über das Spannungsfeld zwischen Guten
-                        Diensten und Wirtschaftsinteressen der Schweiz</a
-                      >
+                      <a href="{{frontend_base_url}}/2022/03/07/wie-russland-fuer-den-cyber-krieg-aufgeruestet-hat">Analyse zu Russlands Cyber-Krieg gegen die Ukraine</a>, die
+                      <a href="{{frontend_base_url}}/2022/03/05/wie-die-schweiz-ihrem-besten-ruf-gerecht-werden-wollte-aber-ihr-schlechtestes-bild-abgab">Recherche über das Spannungsfeld zwischen Guten Diensten und Wirtschaftsinteressen der Schweiz</a>
                       oder der
-                      <a
-                        href="{{frontend_base_url}}/2022/03/10/diesmal-haben-sie-blaue-augen"
-                        >Essay über den (versteckten) Rassismus im Umgang mit
-                        Geflüchteten in Europa</a
-                      >
+                      <a href="{{frontend_base_url}}/2022/03/10/diesmal-haben-sie-blaue-augen">Essay über den (versteckten) Rassismus im Umgang mit Geflüchteten in Europa</a>
                       liefern Ihnen Hintergründe, die die Welt ein bisschen
                       verständlicher machen.
                     </p>
                     <p>
                       Für mehr Aktualität werfen Sie einen Blick auf unsere
                       Briefings. Wir trennen für Sie das Wichtige vom Nichtigen,
-                      kompakt und regelmässig: Immer donnerstags steht im «<a
-                        href="{{frontend_base_url}}/format/briefing-aus-bern"
-                        >Briefing aus Bern</a
-                      >», was die Schweizer Politik bewegt, freitags finden Sie
-                      in «<a
-                        href="{{frontend_base_url}}/format/was-diese-woche-wichtig-war"
-                        >Was diese Woche wichtig war</a
-                      >» eine Übersicht über Meldungen aus aller Welt.
+                      kompakt und regelmässig: Immer donnerstags steht im «<a href="{{frontend_base_url}}/format/briefing-aus-bern">Briefing aus Bern</a>», was die Schweizer Politik bewegt, freitags finden Sie
+                      in «<a href="{{frontend_base_url}}/format/was-diese-woche-wichtig-war">Was diese Woche wichtig war</a>» eine Übersicht über Meldungen aus aller Welt.
                     </p>
                     <p>
                       Und falls Sie sich beim Lesen fragen, wie solche Beiträge
-                      entstehen und was dahintersteckt: Im Bereich «<a
-                        href="{{frontend_base_url}}/meta"
-                        >Meta</a
-                      >» zeigen wir auf, wie wir arbeiten (<a
-                        href="{{frontend_base_url}}/2021/11/09/die-redaktion-ist-nicht-unabhaengig-aber-frei"
-                        >wie gehen wir mit Interessenkonflikten um?</a
-                      >), was hinter den Kulissen geschieht (<a
-                        href="{{frontend_base_url}}/2021/05/14/warum-sie-sehen-was-sie-sehen"
-                        >was macht eigentlich eine Bildredaktorin?</a
-                      >) und wie es um unser Unternehmen steht (<a
-                        href="{{frontend_base_url}}/2021/10/08/werfen-sie-einen-blick-in-unsere-geschaeftsbuecher"
-                        >was steht in unseren Geschäftsbüchern?</a
-                      >).
+                      entstehen und was dahintersteckt: Im Bereich «<a href="{{frontend_base_url}}/meta">Meta</a>» zeigen wir auf, wie wir arbeiten
+                       (<a href="{{frontend_base_url}}/2021/11/09/die-redaktion-ist-nicht-unabhaengig-aber-frei">wie gehen wir mit Interessenkonflikten um?</a>), 
+                       was hinter den Kulissen geschieht (<a href="{{frontend_base_url}}/2021/05/14/warum-sie-sehen-was-sie-sehen">was macht eigentlich eine Bildredaktorin?</a>) 
+                       und wie es um unser Unternehmen steht (<a href="{{frontend_base_url}}/2021/10/08/werfen-sie-einen-blick-in-unsere-geschaeftsbuecher">was steht in unseren Geschäftsbüchern?</a>).
                     </p>
                     <p>
                       Sie haben Wünsche oder Fragen? Dann lassen Sie es uns
                       wissen: Schreiben Sie an
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >.
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>.
                     </p>
                     <p>Ihre Crew der Republik</p>
                     <p>
@@ -110,18 +82,9 @@
                       unserem
                       <a href="{{frontend_base_url}}/audio">Audioangebot</a>
                       finden Sie Podcasts wie die historische
-                      True-Crime-Recherche «<a
-                        href="{{frontend_base_url}}/2022/02/26/mord-im-maennermilieu-podcast"
-                        >Mord im Männermilieu</a
-                      >» oder das monatliche Talk-Format «<a
-                        href="{{frontend_base_url}}/format/im-gespraech"
-                        >Im Gespräch</a
-                      >», in dem Roger de Weck zum Beispiel
-                      <a
-                        href="{{frontend_base_url}}/2022/02/11/im-gespraech-mit-mark-dittli-2"
-                        >mit Finanzexperte Mark Dittli über die Gründe und
-                        Folgen der gegenwärtigen Inflation diskutiert</a
-                      >.
+                      True-Crime-Recherche «<a href="{{frontend_base_url}}/2022/02/26/mord-im-maennermilieu-podcast">Mord im Männermilieu</a>» 
+                      oder das monatliche Talk-Format «<a href="{{frontend_base_url}}/format/im-gespraech">Im Gespräch</a>», in dem Roger de Weck zum Beispiel
+                      <a href="{{frontend_base_url}}/2022/02/11/im-gespraech-mit-mark-dittli-2">mit Finanzexperte Mark Dittli über die Gründe und Folgen der gegenwärtigen Inflation diskutiert</a>.
                     </p>
                   </td>
                 </tr>
@@ -146,9 +109,7 @@
                       Republik AG<br />
                       Sihlhallenstrasse 1, CH-8004 Zürich<br />
                       <a href="{{frontend_base_url}}">www.republik.ch</a><br />
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
                     </p>
                   </td>
                 </tr>
