--- a/packages/backend-modules/mail/templates/election_candidacy_confirmation_gen21m.html
+++ b/packages/backend-modules/mail/templates/election_candidacy_confirmation_gen21m.html
@@ -57,10 +57,7 @@
                     </p>
                     <p>
                       Bis zum 29. Oktober
-                      <a
-                        href="{{frontend_base_url}}/vote/2021/kandidieren?edit=true"
-                        >können Sie Ihre Angaben ändern</a
-                      >, falls Sie das wünschen.
+                      <a href="{{frontend_base_url}}/vote/2021/kandidieren?edit=true">können Sie Ihre Angaben ändern</a>, falls Sie das wünschen.
                     </p>
                     <p>
                       Die Wahl selbst dauert vom 12. bis zum 28. November.
@@ -73,9 +70,7 @@
                     </p>
                     <p>
                       Wir werden die Debatte moderieren und dafür sorgen, dass
-                      <a href="{{frontend_base_url}}/etikette"
-                        >unsere Etikette</a
-                      >
+                      <a href="{{frontend_base_url}}/etikette">unsere Etikette</a>
                       eingehalten wird.
                     </p>
                     <p>
@@ -108,11 +103,8 @@
                       <br />
                       Project R Genossenschaft<br />
                       Sihlhallenstrasse 1, 8004 Zürich<br />
-                      <a href="{{link_projectr}}">www.project-r.construction</a
-                      ><br />
-                      <a href="mailto:office@project-r.construction"
-                        >office@project-r.construction</a
-                      >
+                      <a href="{{link_projectr}}">www.project-r.construction</a><br />
+                      <a href="mailto:office@project-r.construction">office@project-r.construction</a>
                     </p>
                     <p style="font-size: 14px; line-height: 20px">
                       <img
@@ -131,9 +123,7 @@
                       Republik AG<br />
                       Sihlhallenstrasse 1, 8004 Zürich<br />
                       <a href="{{frontend_base_url}}">www.republik.ch</a><br />
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
                     </p>
                   </td>
                 </tr>
