--- a/packages/backend-modules/mail/templates/email_change_new_address.html
+++ b/packages/backend-modules/mail/templates/email_change_new_address.html
@@ -47,9 +47,7 @@
                       E-Mail auf Ihrer neuen Adresse.
                     </p>
                     <p>
-                      <a href="{{LOGIN_LINK}}"
-                        >Klicken Sie bitte hier, um diese zu bestätigen</a
-                      >.
+                      <a href="{{LOGIN_LINK}}">Klicken Sie bitte hier, um diese zu bestätigen</a>.
                     </p>
                     <p>Herzlich</p>
                     <p>Ihre Crew der Republik</p>
@@ -76,9 +74,7 @@
                       Republik AG<br />
                       Sihlhallenstrasse 1, CH-8004 Zürich<br />
                       <a href="{{frontend_base_url}}">www.republik.ch</a><br />
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
                     </p>
                   </td>
                 </tr>
