--- a/packages/backend-modules/mail/templates/email_change_old_address.html
+++ b/packages/backend-modules/mail/templates/email_change_old_address.html
@@ -49,9 +49,7 @@
                     <p>
                       Falls dies nicht in Ihrem Sinn ist, melden Sie sich bitte
                       umgehend bei uns:
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
                     </p>
                     <p>Herzlich</p>
                     <p>Ihre Crew der Republik</p>
@@ -78,9 +76,7 @@
                       Republik AG<br />
                       Sihlhallenstrasse 1, CH-8004 Zürich<br />
                       <a href="{{frontend_base_url}}">www.republik.ch</a><br />
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
                     </p>
                   </td>
                 </tr>
