--- a/packages/backend-modules/mail/templates/membership_owner_autopay_failed.html
+++ b/packages/backend-modules/mail/templates/membership_owner_autopay_failed.html
@@ -65,11 +65,7 @@
                           <table border="0" cellspacing="0" cellpadding="0">
                             <tr>
                               <td align="center" bgcolor="#3CAD00">
-                                <a
-                                  href="{{prolong_url}}"
-                                  style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;"
-                                  >Jetzt Zahlungsart aktualisieren!</a
-                                >
+                                <a href="{{prolong_url}}" style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;">Jetzt Zahlungsart aktualisieren!</a>
                               </td>
                             </tr>
                           </table>
@@ -84,9 +80,7 @@
                       Falls Sie gerade einen finanziellen Engpass haben: Journalismus kostet zwar, 
                       doch wir wollen niemanden ausschliessen. Wir haben Verständnis, wenn es für 
                       {{autopay_total}} nicht reicht. Wir bieten Ihnen deshalb die Möglichkeit, die
-                      <a href="{{prolong_url_reduced}}"
-                        >Höhe Ihres Mitgliederbeitrags selbst zu bestimmen</a
-                      >.
+                      <a href="{{prolong_url_reduced}}">Höhe Ihres Mitgliederbeitrags selbst zu bestimmen</a>.
                     </p>
                     {{else if fourthAttempt}}
                     <p>
@@ -114,11 +108,7 @@
                           <table border="0" cellspacing="0" cellpadding="0">
                             <tr>
                               <td align="center" bgcolor="#3CAD00">
-                                <a
-                                  href="{{prolong_url}}"
-                                  style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;"
-                                  >Jetzt bezahlen!</a
-                                >
+                                <a href="{{prolong_url}}" style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;">Jetzt bezahlen!</a>
                               </td>
                             </tr>
                           </table>
@@ -137,9 +127,7 @@
                     <p>
                       Dies, weil Ihre Kreditkarte verlangt, dass Buchungen von
                       Ihnen online bestätigt werden. Wir bitten Sie daher,
-                      <a href="{{prolong_url}}"
-                        >Ihre Mitgliedschaft hier manuell zu erneuern</a
-                      >.
+                      <a href="{{prolong_url}}">Ihre Mitgliedschaft hier manuell zu erneuern</a>.
                     </p>
                     {{else if attempt_is_last}}
                     <p>
@@ -150,26 +138,18 @@
                     <p>
                       Wir unternehmen am {{attempt_next_at}} einen letzten
                       Versuch und bitten Sie, bis dahin
-                      <a href="{{prolong_url}}"
-                        >Ihre Kreditkartendaten hier gegebenenfalls zu
-                        aktualisieren</a
-                      >.
+                      <a href="{{prolong_url}}">Ihre Kreditkartendaten hier gegebenenfalls zu aktualisieren</a>.
                     </p>
                     {{else}}
                     <p>
                       Wir unternehmen am {{attempt_next_at}} erneut einen
                       Versuch und bitten Sie, bis dahin nötigenfalls
-                      <a href="{{prolong_url}}"
-                        >eine neue Kreditkarte zu erfassen</a
-                      >.
+                      <a href="{{prolong_url}}">eine neue Kreditkarte zu erfassen</a>.
                     </p>
                     {{/if}}
                     <p>
                       Sie möchten nicht mehr per Kreditkarte bezahlen?
-                      <a href="{{prolong_url}}"
-                        >Dann können Sie hier eine andere Zahlungsart
-                        auswählen</a
-                      >.
+                      <a href="{{prolong_url}}">Dann können Sie hier eine andere Zahlungsart auswählen</a>.
                     </p>
                     {{/if}}
                     <p>Herzlich</p>
@@ -197,9 +177,7 @@
                       Republik AG<br />
                       Sihlhallenstrasse 1, CH-8004 Zürich<br />
                       <a href="{{frontend_base_url}}">www.republik.ch</a><br />
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
                     </p>
                   </td>
                 </tr>
