--- a/packages/backend-modules/mail/templates/membership_owner_autopay_notice.html
+++ b/packages/backend-modules/mail/templates/membership_owner_autopay_notice.html
@@ -70,11 +70,7 @@
                       Herzen und hoffen, dass Sie sich und uns treu bleiben und
                       weiterhin in kompromisslosen Journalismus investieren.
                       Sollten Sie es sich anders überlegen, können Sie
-                      <a href="{{prolong_url}}"
-                        >Ihre Mitgliedschaft {{#if autopay_with_donation}}
-                        beziehungsweise die Höhe Ihres Spendenbeitrags{{/if}}
-                        vor der Abbuchung noch anpassen</a
-                      >.
+                      <a href="{{prolong_url}}">Ihre Mitgliedschaft {{#if autopay_with_donation}} beziehungsweise die Höhe Ihres Spendenbeitrags{{/if}} vor der Abbuchung noch anpassen</a>.
                     </p>
                     {{else if autopay_with_discount}}
                     <p>
@@ -83,9 +79,7 @@
                       der Unterstützung unserer Verlegerinnen abhängt, würde es
                       uns freuen, wenn Sie – falls es Ihre finanzielle Situation
                       erlaubt –
-                      <a href="{{prolong_url}}"
-                        >Ihren Mitgliedschaftsbeitrag erhöhen könnten</a
-                      >. Jede zusätzliche Summe macht einen Unterschied.
+                      <a href="{{prolong_url}}">Ihren Mitgliedschaftsbeitrag erhöhen könnten</a>. Jede zusätzliche Summe macht einen Unterschied.
                     </p>
                     {{else if autopay_with_donation}}
                     <p>
@@ -97,10 +91,7 @@
                       hoffen, dass Sie sich und uns treu bleiben und weiterhin
                       in kompromisslosen Journalismus investieren. Sollten Sie
                       es sich anders überlegen, können Sie die
-                      <a href="{{prolong_url}}"
-                        >Höhe Ihres Spendenbeitrags vor der Abbuchung noch
-                        anpassen</a
-                      >.
+                      <a href="{{prolong_url}}">Höhe Ihres Spendenbeitrags vor der Abbuchung noch anpassen</a>.
                     </p>
                     {{else}}
                     <p>
@@ -114,10 +105,7 @@
                     {{/if}}
                     <p>
                       Ausserdem können Sie bis zur Abbuchung falls gewünscht
-                      <a href="{{prolong_url}}"
-                        >eine andere Kreditkarte hinterlegen, eine andere
-                        Zahlungsart wählen</a
-                      >
+                      <a href="{{prolong_url}}">eine andere Kreditkarte hinterlegen, eine andere Zahlungsart wählen</a>
                       oder
                       <a href="{{cancel_url}}">Ihre Mitgliedschaft kündigen</a>.
                     </p>
@@ -125,9 +113,7 @@
                       Wir melden uns erneut, sobald Ihre Mitgliedschaft
                       erfolgreich verlängert wurde. In der Zwischenzeit können
                       Sie sich bei Fragen unter
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
                       melden.
                     </p>
                     <p>Herzlich</p>
@@ -155,9 +141,7 @@
                       Republik AG<br />
                       Sihlhallenstrasse 1, CH-8004 Zürich<br />
                       <a href="{{frontend_base_url}}">www.republik.ch</a><br />
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
                     </p>
                   </td>
                 </tr>
