--- a/packages/backend-modules/mail/templates/membership_owner_feedback.html
+++ b/packages/backend-modules/mail/templates/membership_owner_feedback.html
@@ -67,9 +67,7 @@
                       Feedback geben oder Vorschläge machen, Kritik loswerden
                       und Fragen stellen. Brauchen Sie technische Unterstützung
                       oder funktioniert etwas nicht, wenden Sie sich direkt an
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >.
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>.
                     </p>
 
                     <p>Herzlich</p>
@@ -97,9 +95,7 @@
                       Republik AG<br />
                       Sihlhallenstrasse 1, CH-8004 Zürich<br />
                       <a href="{{frontend_base_url}}">www.republik.ch</a><br />
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
                     </p>
                   </td>
                 </tr>
