--- a/packages/backend-modules/mail/templates/membership_owner_prolong_abo_give_months_notice_0.html
+++ b/packages/backend-modules/mail/templates/membership_owner_prolong_abo_give_months_notice_0.html
@@ -47,9 +47,7 @@
                       Sie diesen unglücklichen Lauf der Dinge ändern: 
                     </p>
                     <p>
-                      <a href="{{prolong_url}}"
-                        >Jetzt an Bord bleiben!</a
-                      >
+                      <a href="{{prolong_url}}">Jetzt an Bord bleiben!</a>
                     </p>
                     <p>
                       Wir schreiben Ihnen so direkt, weil Ihr Beitrag für unsere 
@@ -81,11 +79,7 @@
                           <table border="0" cellspacing="0" cellpadding="0">
                             <tr>
                               <td align="center" bgcolor="#3CAD00">
-                                <a
-                                  href="https://www.republik.ch/angebote?goto=account"
-                                  style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;"
-                                  >Jetzt bezahlen!</a
-                                >
+                                <a href="https://www.republik.ch/angebote?goto=account" style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;">Jetzt bezahlen!</a>
                               </td>
                             </tr>
                           </table>
@@ -133,9 +127,7 @@
                       Republik AG<br />
                       Sihlhallenstrasse 1, CH-8004 Zürich<br />
                       <a href="{{frontend_base_url}}">www.republik.ch</a><br />
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
                     </p>
                   </td>
                 </tr>
