--- a/packages/backend-modules/mail/templates/membership_owner_prolong_notice_7.html
+++ b/packages/backend-modules/mail/templates/membership_owner_prolong_notice_7.html
@@ -56,11 +56,7 @@
                           <table border="0" cellspacing="0" cellpadding="0">
                             <tr>
                               <td align="center" bgcolor="#3CAD00">
-                                <a
-                                  href="{{prolong_url}}"
-                                  style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;"
-                                  >Unterstützen Sie uns für ein weiteres Jahr!</a
-                                >
+                                <a href="{{prolong_url}}" style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;">Unterstützen Sie uns für ein weiteres Jahr!</a>
                               </td>
                             </tr>
                           </table>
@@ -79,9 +75,7 @@
                     </p>
                     <p>Ihre Crew der Republik</p>
                     <p>
-                      PS: Etwas klappt nicht oder Sie haben sonstige Fragen zur Verlängerung Ihrer Mitgliedschaft? Melden Sie sich bei uns: <a href="mailto:kontakt@republik.ch"
-                      >kontakt@republik.ch</a
-                    >.
+                      PS: Etwas klappt nicht oder Sie haben sonstige Fragen zur Verlängerung Ihrer Mitgliedschaft? Melden Sie sich bei uns: <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>.
                     </p>
                   </td>
                 </tr>
@@ -106,9 +100,7 @@
                       Republik AG<br />
                       Sihlhallenstrasse 1, CH-8004 Zürich<br />
                       <a href="{{frontend_base_url}}">www.republik.ch</a><br />
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
                     </p>
                   </td>
                 </tr>
