--- a/packages/backend-modules/mail/templates/membership_owner_prolong_yearly_abo_notice.html
+++ b/packages/backend-modules/mail/templates/membership_owner_prolong_yearly_abo_notice.html
@@ -70,11 +70,7 @@
                           <table border="0" cellspacing="0" cellpadding="0">
                             <tr>
                               <td align="center" bgcolor="#3CAD00">
-                                <a
-                                  href="{{link_offers_overview}}"
-                                  style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;"
-                                  >An Bord bleiben</a
-                                >
+                                <a href="{{link_offers_overview}}" style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;">An Bord bleiben</a>
                               </td>
                             </tr>
                           </table>
@@ -102,13 +98,10 @@
                       style="color:#282828;font-size:17px;line-height:24px;{{sg_font_style_sans_serif_regular}}"
                     >
                       <li>
-                        <a href="{{link_offer_abo}}"
-                          >Die Jahresmitgliedschaft</a
-                        >
+                        <a href="{{link_offer_abo}}">Die Jahresmitgliedschaft</a>
                         für CHF 240/Jahr
                         <p
-                          style="color:#282828;font-size:14px;line-height:20px;{{sg_font_style_sans_serif_regular}}"
-                        >
+                          style="color:#282828;font-size:14px;line-height:20px;{{sg_font_style_sans_serif_regular}}">
                           Mit dieser Mitgliedschaft erhalten Sie unabhängigen
                           und werbefreien Qualitätsjournalismus und sind Teil
                           der Republik-Community. Gleichzeitig sind Sie Mitglied
@@ -117,13 +110,10 @@
                         </p>
                       </li>
                       <li>
-                        <a href="{{link_offer_monthly_abo}}"
-                          >Das Monatsabonnement</a
-                        >
+                        <a href="{{link_offer_monthly_abo}}">Das Monatsabonnement</a>
                         für CHF 22/Monat
                         <p
-                          style="color:#282828;font-size:14px;line-height:20px;{{sg_font_style_sans_serif_regular}}"
-                        >
+                          style="color:#282828;font-size:14px;line-height:20px;{{sg_font_style_sans_serif_regular}}">
                           Mit diesem Abo erhalten Sie Zugang zum Magazin und zum
                           Dialog – ohne dass Sie Teil unserer Genossenschaft
                           werden. Das Abonnement verlängert sich automatisch,
@@ -131,13 +121,10 @@
                         </p>
                       </li>
                       <li>
-                        <a href="{{link_offer_benefactor}}"
-                          >Die Gönnermitgliedschaft</a
-                        >
+                        <a href="{{link_offer_benefactor}}">Die Gönnermitgliedschaft</a>
                         ab CHF 1000/Jahr
                         <p
-                          style="color:#282828;font-size:14px;line-height:20px;{{sg_font_style_sans_serif_regular}}"
-                        >
+                          style="color:#282828;font-size:14px;line-height:20px;{{sg_font_style_sans_serif_regular}}">
                           Mit der Gönnermitgliedschaft erhalten Sie Zugang zum
                           vollständigen Republik-Angebot, ein Extra-Dankeschön
                           und die Gewissheit, einen sehr wichtigen Beitrag zur
@@ -151,13 +138,10 @@
                         </p>
                       </li>
                       <li>
-                        <a href="{{link_offer_reduced_ausbildung}}"
-                          >Die Ausbildungsmitgliedschaft</a
-                        >
+                        <a href="{{link_offer_reduced_ausbildung}}">Die Ausbildungsmitgliedschaft</a>
                         für CHF 140/Jahr
                         <p
-                          style="color:#282828;font-size:14px;line-height:20px;{{sg_font_style_sans_serif_regular}}"
-                        >
+                          style="color:#282828;font-size:14px;line-height:20px;{{sg_font_style_sans_serif_regular}}">
                           Mit dieser Mitgliedschaft erhalten alle Auszubildenden
                           und Studierenden Zugang zum vollständigen
                           Republik-Angebot inklusive
@@ -170,9 +154,7 @@
                     <p>
                       Bei Fragen oder wenn Sie Unterstützung brauchen, helfen
                       wir Ihnen unter
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
                       gerne weiter.
                     </p>
                     <p>Herzlich</p>
@@ -200,9 +182,7 @@
                       Republik AG<br />
                       Sihlhallenstrasse 1, CH-8004 Zürich<br />
                       <a href="{{frontend_base_url}}">www.republik.ch</a><br />
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
                     </p>
                   </td>
                 </tr>
