--- a/packages/backend-modules/mail/templates/membership_owner_prolong_yearly_abo_winback_24.html
+++ b/packages/backend-modules/mail/templates/membership_owner_prolong_yearly_abo_winback_24.html
@@ -1019,11 +1019,7 @@
                           <tbody>
                             <tr>
                               <td align="center" width="100%">
-                                <a
-                                  href="https://www.republik.ch/angebote?package=ABO&userPrice=1&price=12000&reason=Zurueck-zur-Republik-Angebot&utm_campaign=mitstreiter"><strong>Jetzt
-                                    zurück zur
-                                    Republik</strong>
-                                </a>
+                                <a href="https://www.republik.ch/angebote?package=ABO&userPrice=1&price=12000&reason=Zurueck-zur-Republik-Angebot&utm_campaign=mitstreiter"><strong>Jetzt zurück zur Republik</strong></a>
                               </td>
                             </tr>
                           </tbody>
@@ -1082,10 +1078,7 @@
                         Damit erhalten Sie Zugang zum vollen Magazin, also zu über 8000 Beiträgen. Das Abo ist
                         jederzeit kündbar.<br>
                         <br>
-                        <a href="https://www.republik.ch/" target="_blank" title="Im Web lesen"><img alt="REPUBLIK"
-                            height="79" src="https://www.republik.ch/static/logo_republik_newsletter.png"
-                            style="border:0;width:178px !important;height:79px !important;margin:0;max-width:100% !important"
-                            width="178"></a>
+                        <a href="https://www.republik.ch/" target="_blank" title="Im Web lesen"><img alt="REPUBLIK" height="79" src="https://www.republik.ch/static/logo_republik_newsletter.png" style="border:0;width:178px !important;height:79px !important;margin:0;max-width:100% !important" width="178"></a>
 
                         <p>Republik AG<br>
                           Sihlhallenstrasse 1<br>
