--- a/packages/backend-modules/mail/templates/membership_prolong_notice.html
+++ b/packages/backend-modules/mail/templates/membership_prolong_notice.html
@@ -50,8 +50,7 @@
                       soeben Ihre Mitgliedschaft um ein Jahr verlängert. {{/if}}
                     </p>
                     <p>
-                      <strong
-                        >Das neue Ablaufdatum Ihrer Mitgliedschaft:
+                      <strong>Das neue Ablaufdatum Ihrer Mitgliedschaft:
                         {{end_date}}</strong
                       >
                     </p>
@@ -85,9 +84,7 @@
                       Republik AG<br />
                       Sihlhallenstrasse 1, CH-8004 Zürich<br />
                       <a href="{{frontend_base_url}}">www.republik.ch</a><br />
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
                     </p>
                   </td>
                 </tr>
