--- a/packages/backend-modules/mail/templates/membership_winback_NO_MONEY.html
+++ b/packages/backend-modules/mail/templates/membership_winback_NO_MONEY.html
@@ -67,10 +67,7 @@
                     </p>
                     <p>Dürfen wir deshalb versuchen, Sie umzustimmen?</p>
                     <p>
-                      <a href="{{prolong_url_reduced}}"
-                        >Sie dürfen nämlich gerne selbst einen Preis
-                        festlegen</a
-                      >, der für Sie vertretbar ist und im Rahmen Ihrer
+                      <a href="{{prolong_url_reduced}}">Sie dürfen nämlich gerne selbst einen Preis festlegen</a>, der für Sie vertretbar ist und im Rahmen Ihrer
                       Möglichkeiten liegt.
                     </p>
                     <p>Was meinen Sie?</p>
@@ -109,9 +106,7 @@
                       Republik AG<br />
                       Sihlhallenstrasse 1, CH-8004 Zürich<br />
                       <a href="{{frontend_base_url}}">www.republik.ch</a><br />
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
                     </p>
                   </td>
                 </tr>
