--- a/packages/backend-modules/mail/templates/membership_winback_NO_TIME.html
+++ b/packages/backend-modules/mail/templates/membership_winback_NO_TIME.html
@@ -60,13 +60,9 @@
                     </p>
                     <p>
                       Darum haben wir einen Vorschlag für Sie:
-                      <a href="{{prolong_url}}"
-                        >Sie bleiben weiterhin an Bord der Republik</a
-                      >
+                      <a href="{{prolong_url}}">Sie bleiben weiterhin an Bord der Republik</a>
                       und
-                      <a href="{{link_account_newsletter}}"
-                        >bestellen nur noch unseren Wochenend-Newsletter</a
-                      >. Sie erhalten dann nur noch samstags eine E-Mail mit den
+                      <a href="{{link_account_newsletter}}">bestellen nur noch unseren Wochenend-Newsletter</a>. Sie erhalten dann nur noch samstags eine E-Mail mit den
                       besten Beiträgen der vergangenen Woche. So wird Ihr
                       Posteingang etwas entlastet, aber selbstverständlich haben
                       Sie über unsere
@@ -108,9 +104,7 @@
                       Republik AG<br />
                       Sihlhallenstrasse 1, CH-8004 Zürich<br />
                       <a href="{{frontend_base_url}}">www.republik.ch</a><br />
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
                     </p>
                   </td>
                 </tr>
