--- a/packages/backend-modules/mail/templates/membership_winback_PAPER.html
+++ b/packages/backend-modules/mail/templates/membership_winback_PAPER.html
@@ -63,9 +63,7 @@
                       Als Alternative zur Bildschirmlektüre haben wir übrigens
                       bereits mehr als 100 Audiobeiträge verfügbar und planen,
                       dieses Angebot auszubauen.
-                      <a href="{{link_listen}}"
-                        >Hier finden Sie eine Auswahl an Audiobeiträgen</a
-                      >.
+                      <a href="{{link_listen}}">Hier finden Sie eine Auswahl an Audiobeiträgen</a>.
                     </p>
                     <p>
                       Wir würden uns sehr freuen, wenn Sie zu einem späteren
@@ -101,9 +99,7 @@
                       Republik AG<br />
                       Sihlhallenstrasse 1, CH-8004 Zürich<br />
                       <a href="{{frontend_base_url}}">www.republik.ch</a><br />
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
                     </p>
                   </td>
                 </tr>
