--- a/packages/backend-modules/mail/templates/membership_winback_TOO_EXPENSIVE.html
+++ b/packages/backend-modules/mail/templates/membership_winback_TOO_EXPENSIVE.html
@@ -68,10 +68,7 @@
                     </p>
                     <p>Dürfen wir deshalb versuchen, Sie umzustimmen?</p>
                     <p>
-                      <a href="{{prolong_url_reduced}}"
-                        >Legen Sie hier einfach selbst den Preis für eine
-                        Jahresmitgliedschaft fest</a
-                      >, den Sie für angemessen halten und den Sie sich leisten
+                      <a href="{{prolong_url_reduced}}">Legen Sie hier einfach selbst den Preis für eine Jahresmitgliedschaft fest</a>, den Sie für angemessen halten und den Sie sich leisten
                       wollen.
                     </p>
                     <p>Was meinen Sie?</p>
@@ -110,9 +107,7 @@
                       Republik AG<br />
                       Sihlhallenstrasse 1, CH-8004 Zürich<br />
                       <a href="{{frontend_base_url}}">www.republik.ch</a><br />
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
                     </p>
                   </td>
                 </tr>
