--- a/packages/backend-modules/mail/templates/payment_successful_abo.html
+++ b/packages/backend-modules/mail/templates/payment_successful_abo.html
@@ -43,8 +43,7 @@
                   <td style="padding: 20px">
                     <p>Guten Tag</p>
                     <p>
-                      <strong
-                        >Ihre Zahlung ist erfolgreich bei uns eingegangen.<br />
+                      <strong>Ihre Zahlung ist erfolgreich bei uns eingegangen.<br />
                         Herzlichen Dank!</strong
                       >
                     </p>
@@ -72,19 +71,12 @@
                     <p>
                       Sie können ab sofort
                       <a href="{{link_signin}}">das Magazin lesen</a>, an
-                      <a href="{{link_dialog}}"
-                        >sämtlichen Debatten teilnehmen</a
-                      >
+                      <a href="{{link_dialog}}">sämtlichen Debatten teilnehmen</a>
                       und die Republik
-                      <a href="{{link_account_share}}"
-                        >mit Ihren Freunden oder Feinden teilen</a
-                      >.
+                      <a href="{{link_account_share}}">mit Ihren Freunden oder Feinden teilen</a>.
                     </p>
                     <p>
-                      Falls Sie Fragen zur Inbetriebnahme des Magazins haben:<br /><a
-                        href="{{login_manual}}"
-                        >Hier finden Sie die Gebrauchsanleitung</a
-                      >, die die wichtigsten davon klärt.
+                      Falls Sie Fragen zur Inbetriebnahme des Magazins haben:<br /><a href="{{login_manual}}">Hier finden Sie die Gebrauchsanleitung</a>, die die wichtigsten davon klärt.
                     </p>
                     <p>
                       Wir schicken Ihnen, unserer neusten Verlegerin, unserem
@@ -145,10 +137,7 @@
                     </p>
                     {{/if}} {{#if totalPledgeBelow1000}}
                     <p>
-                      Falls Sie Fragen zur Inbetriebnahme des Magazins haben:<br /><a
-                        href="{{link_manual}}"
-                        >Hier finden Sie die Gebrauchsanleitung</a
-                      >, die die wichtigsten davon klärt.
+                      Falls Sie Fragen zur Inbetriebnahme des Magazins haben:<br /><a href="{{link_manual}}">Hier finden Sie die Gebrauchsanleitung</a>, die die wichtigsten davon klärt.
                     </p>
                     <p>
                       Wir wünschen weiterhin viel Vergnügen mit der Republik.
@@ -179,9 +168,7 @@
                       Republik AG<br />
                       Sihlhallenstrasse 1, CH-8004 Zürich<br />
                       <a href="{{frontend_base_url}}">www.republik.ch</a><br />
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
                     </p>
                   </td>
                 </tr>
