--- a/packages/backend-modules/mail/templates/payment_successful_abo_give.html
+++ b/packages/backend-modules/mail/templates/payment_successful_abo_give.html
@@ -43,22 +43,19 @@
                   <td style="padding: 20px">
                     <p>Guten Tag</p>
                     <p>
-                      <strong
-                        >Ihre Zahlung ist erfolgreich bei uns
+                      <strong>Ihre Zahlung ist erfolgreich bei uns
                         eingegangen.</strong
                       >
                     </p>
 
                     {{#if voucher_codes}}
                     <p>
-                      <strong
-                        >Herzlichen Dank, dass Sie die Republik mit einer
+                      <strong>Herzlichen Dank, dass Sie die Republik mit einer
                         Geschenk-Mitgliedschaft unterstützen!</strong
                       >
                     </p>
                     <p>
-                      <strong
-                        >Für jede Geschenk-Mitgliedschaft erhalten Sie
+                      <strong>Für jede Geschenk-Mitgliedschaft erhalten Sie
                         nachfolgend einen 6-Zeichen-Code.</strong
                       >
                     </p>
@@ -108,8 +105,7 @@
                     {{/if}} {{#if hasAnyGrantedMemberships}} {{#if
                     hasOneGrantedMemberships}}
                     <p>
-                      <strong
-                        >Vielen Dank, dass Sie die Verbreitung der Republik
+                      <strong>Vielen Dank, dass Sie die Verbreitung der Republik
                         {{#if voucher_codes}}zusätzlich {{/if}}mit einer
                         Wachstums-Mitgliedschaft unterstützen!</strong
                       >
@@ -121,8 +117,7 @@
                     </p>
                     {{/if}} {{#if hasMultipleGrantedMemberships}}
                     <p>
-                      <strong
-                        >Vielen Dank, dass Sie die Verbreitung der Republik
+                      <strong>Vielen Dank, dass Sie die Verbreitung der Republik
                         {{#if voucher_codes}}zusätzlich {{/if}}mit gleich
                         mehreren Wachstums-Mitgliedschaften
                         unterstützen!</strong
@@ -165,9 +160,7 @@
                       Republik AG<br />
                       Sihlhallenstrasse 1, CH-8004 Zürich<br />
                       <a href="{{frontend_base_url}}">www.republik.ch</a><br />
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
                     </p>
                   </td>
                 </tr>
