--- a/packages/backend-modules/mail/templates/payment_successful_abo_give_months.html
+++ b/packages/backend-modules/mail/templates/payment_successful_abo_give_months.html
@@ -43,15 +43,13 @@
                   <td style="padding: 20px">
                     <p>Guten Tag</p>
                     <p>
-                      <strong
-                        >Ihre Zahlung ist erfolgreich bei uns eingegangen.<br />
+                      <strong>Ihre Zahlung ist erfolgreich bei uns eingegangen.<br />
                         Herzlichen Dank, dass Sie die Republik mit einem
                         Geschenkabonnement unterstützen!</strong
                       >
                     </p>
                     <p>
-                      <strong
-                        >Für jedes Geschenkabonnement erhalten Sie nachfolgend
+                      <strong>Für jedes Geschenkabonnement erhalten Sie nachfolgend
                         einen 6-Zeichen-Code.</strong
                       >
                     </p>
@@ -128,9 +126,7 @@
                       Republik AG<br />
                       Sihlhallenstrasse 1, CH-8004 Zürich<br />
                       <a href="{{frontend_base_url}}">www.republik.ch</a><br />
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
                     </p>
                   </td>
                 </tr>
