--- a/packages/backend-modules/mail/templates/payment_successful_donate.html
+++ b/packages/backend-modules/mail/templates/payment_successful_donate.html
@@ -43,8 +43,7 @@
                   <td style="padding: 20px">
                     <p>Guten Tag</p>
                     <p>
-                      <strong
-                        >Herzlichen Dank für Ihre Spende von
+                      <strong>Herzlichen Dank für Ihre Spende von
                         {{total_formatted}}.<br />
                         Die Zahlung ist erfolgreich bei uns eingegangen.</strong
                       >
@@ -87,9 +86,7 @@
                       Republik AG<br />
                       Sihlhallenstrasse 1, CH-8004 Zürich<br />
                       <a href="{{frontend_base_url}}">www.republik.ch</a><br />
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
                     </p>
                   </td>
                 </tr>
