--- a/packages/backend-modules/mail/templates/pledge_abo_give_months.html
+++ b/packages/backend-modules/mail/templates/pledge_abo_give_months.html
@@ -96,8 +96,7 @@
                     <br />
                     {{/if}} {{/if}} {{#if waiting_for_payment}}
                     <p>
-                      <strong
-                        >Da der Gesamtbetrag Ihrer Bestellung die magische
+                      <strong>Da der Gesamtbetrag Ihrer Bestellung die magische
                         Grenze von CHF 1000.– übersteigt, schicken wir Ihnen die
                         Gutscheincodes erst nach Zahlungseingang.</strong
                       >
@@ -148,9 +147,7 @@
                       Republik AG<br />
                       Sihlhallenstrasse 1, CH-8004 Zürich<br />
                       <a href="{{frontend_base_url}}">www.republik.ch</a><br />
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
                     </p>
                   </td>
                 </tr>
