--- a/packages/backend-modules/mail/templates/pledge_benefactor.html
+++ b/packages/backend-modules/mail/templates/pledge_benefactor.html
@@ -77,13 +77,9 @@
                     <p>
                       Sie können ab sofort
                       <a href="{{link_signin}}">das Magazin lesen</a>, an
-                      <a href="{{link_dialog}}"
-                        >sämtlichen Debatten teilnehmen</a
-                      >
+                      <a href="{{link_dialog}}">sämtlichen Debatten teilnehmen</a>
                       und die Republik
-                      <a href="{{link_account_share}}"
-                        >mit Ihren Freunden oder Feinden teilen</a
-                      >.
+                      <a href="{{link_account_share}}">mit Ihren Freunden oder Feinden teilen</a>.
                     </p>
 
                     <p>
@@ -179,9 +175,7 @@
                       Republik AG<br />
                       Sihlhallenstrasse 1, CH-8004 Zürich<br />
                       <a href="{{frontend_base_url}}">www.republik.ch</a><br />
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
                     </p>
                   </td>
                 </tr>
