--- a/packages/backend-modules/mail/templates/signin_app_notice.html
+++ b/packages/backend-modules/mail/templates/signin_app_notice.html
@@ -54,16 +54,12 @@
                     <p>
                       Möchten Sie Ihre Zugriffsanfragen auch weiterhin lieber
                       via E-Mail bestätigen? Dann können Sie
-                      <a href="{{link_account_signin_method}}"
-                        >in Ihrem Konto</a
-                      >
+                      <a href="{{link_account_signin_method}}">in Ihrem Konto</a>
                       «E-Mail» als bevorzugtes Anmeldeverfahren auswählen.
                     </p>
                     <p>
                       Bei Fragen helfen wir Ihnen gerne unter
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
                       weiter.
                     </p>
                     <p>Herzlich</p>
@@ -91,9 +87,7 @@
                       Republik AG<br />
                       Sihlhallenstrasse 1, CH-8004 Zürich<br />
                       <a href="{{frontend_base_url}}">www.republik.ch</a><br />
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
                     </p>
                   </td>
                 </tr>
