--- a/packages/backend-modules/mail/templates/subscription_end.html
+++ b/packages/backend-modules/mail/templates/subscription_end.html
@@ -45,9 +45,7 @@
                     {{#if is_automatic_overdue_cancel}}
                     <p>
                       Leider konnten wir
-                      <a href="{{link_account_abos_goto}}"
-                        >Ihr Republik-Monatsabonnement</a
-                      >
+                      <a href="{{link_account_abos_goto}}">Ihr Republik-Monatsabonnement</a>
                       wiederholt nicht von Ihrer Kreditkarte abbuchen und
                       mussten es aus diesem Grund deaktivieren.
                     </p>
@@ -56,8 +54,7 @@
                       Ihre Unterstützung bis hierhin! Und wir würden uns sehr
                       freuen, wenn Sie zu einem späteren Zeitpunkt wieder bei
                       uns vorbeischauten. Sie haben jederzeit die Möglichkeit,
-                      <a href="{{link_account_abos_goto}}">Ihr Monatsabonnement
-                        zu reaktivieren</a> oder eine
+                      <a href="{{link_account_abos_goto}}">Ihr Monatsabonnement zu reaktivieren</a> oder eine
                       <a href="{{link_offer_abo}}">Jahresmitgliedschaft</a>
                       abzuschliessen.
                     </p>
@@ -78,9 +75,7 @@
                     </p>
                     <p>
                       Sie sind jederzeit willkommen und können
-                      <a href="{{link_account_abos_goto}}"
-                        >Ihr Monatsabo hier ganz einfach wieder aktivieren</a
-                      >.
+                      <a href="{{link_account_abos_goto}}">Ihr Monatsabo hier ganz einfach wieder aktivieren</a>.
                     </p>
                     {{/if}}
                     <p>Herzlich</p>
@@ -108,9 +103,7 @@
                       Republik AG<br />
                       Sihlhallenstrasse 1, CH-8004 Zürich<br />
                       <a href="{{frontend_base_url}}">www.republik.ch</a><br />
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
                     </p>
                   </td>
                 </tr>
