--- a/packages/backend-modules/mail/templates/subscription_reactivate.html
+++ b/packages/backend-modules/mail/templates/subscription_reactivate.html
@@ -49,22 +49,15 @@
                     <p>
                       Sie können ab sofort
                       <a href="{{link_signin}}">das Magazin lesen</a>, an
-                      <a href="{{link_dialog}}"
-                        >sämtlichen Debatten teilnehmen</a
-                      >
+                      <a href="{{link_dialog}}">sämtlichen Debatten teilnehmen</a>
                       und die Republik
-                      <a href="{{link_account_share}}"
-                        >mit Ihren Freunden oder Feinden teilen</a
-                      >.
+                      <a href="{{link_account_share}}">mit Ihren Freunden oder Feinden teilen</a>.
                     </p>
                     <p>
                       Die von Ihnen angegebene Kreditkarte belasten wir
                       monatlich mit CHF 22.–.<br />
                       Ihre
-                      <a href="{{link_account_abos_goto}}"
-                        >persönliche Übersicht zu Ihrem Abonnement finden Sie
-                        hier</a
-                      >.
+                      <a href="{{link_account_abos_goto}}">persönliche Übersicht zu Ihrem Abonnement finden Sie hier</a>.
                     </p>
                     <p>
                       Am gleichen Ort können Sie alle Einstellungen vornehmen
@@ -100,9 +93,7 @@
                       Republik AG<br />
                       Sihlhallenstrasse 1, CH-8004 Zürich<br />
                       <a href="{{frontend_base_url}}">www.republik.ch</a><br />
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
                     </p>
                   </td>
                 </tr>
