--- a/packages/backend-modules/mail/templates/access_recipient_followup.html
+++ b/packages/backend-modules/mail/templates/access_recipient_followup.html
@@ -84,11 +84,7 @@
                           <table border="0" cellspacing="0" cellpadding="0">
                             <tr>
                               <td align="center" bgcolor="#3CAD00">
-                                <a
-                                  href="{{link_offers_overview}}"
-                                  style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;"
-                                  >Ich bin dabei</a
-                                >
+                                <ahref="{{link_offers_overview}}" style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;">Ich bin dabei</a>
                               </td>
                             </tr>
                           </table>
@@ -105,9 +101,7 @@
                     <p>
                       Auch bei weiteren Fragen und Anliegen stehen wir Ihnen
                       gerne zur Verfügung unter
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >.
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>.
                     </p>
                     <p>Herzlich</p>
                     <p>Ihre Crew der Republik</p>
@@ -134,9 +128,7 @@
                       Republik AG<br />
                       Sihlhallenstrasse 1, CH-8004 Zürich<br />
                       <a href="{{frontend_base_url}}">www.republik.ch</a><br />
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
                     </p>
                   </td>
                 </tr>
