--- a/packages/backend-modules/mail/templates/access_recipient_invitation_kampa202202.html
+++ b/packages/backend-modules/mail/templates/access_recipient_invitation_kampa202202.html
@@ -44,10 +44,7 @@
                     <p>Guten Tag</p>
                     {{#unless RECIPIENT_HAS_MEMBERSHIPS}} {{#if recipientIsNotGranter}}
                     <p>
-                      <strong
-                        >{{GRANTER_NAME}} (<a href="mailto:{{GRANTER_EMAIL}}"
-                          >{{GRANTER_EMAIL}}</a
-                        >) hat Ihnen acht Wochen Republik geschenkt.
+                      <strong>{{GRANTER_NAME}} (<a href="mailto:{{GRANTER_EMAIL}}">{{GRANTER_EMAIL}}</a>) hat Ihnen acht Wochen Republik geschenkt.
                       </strong>
                     </p>
                     {{#if GRANTER_MESSAGE}}
@@ -79,11 +76,7 @@
                           <table border="0" cellspacing="0" cellpadding="0">
                             <tr>
                               <td align="center" bgcolor="#3CAD00">
-                                <a
-                                  href="{{LINK_CLAIM_PREFILLED}}"
-                                  style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;"
-                                  >Jetzt anmelden</a
-                                >
+                                <a href="{{LINK_CLAIM_PREFILLED}}" style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;">Jetzt anmelden</a>
                               </td>
                             </tr>
                           </table>
@@ -92,12 +85,9 @@
                     </table>
                     <p>
                       Falls dieser Button nicht funktioniert: Öffnen Sie bitte
-                      <a href="{{LINK_CLAIM_CONTEXTLESS}}"
-                        >{{LINK_CLAIM_CONTEXTLESS}}</a
-                      >, und geben Sie dann Ihren Namen, Ihre E-Mail-Adresse und
+                      <a href="{{LINK_CLAIM_CONTEXTLESS}}">{{LINK_CLAIM_CONTEXTLESS}}</a>, und geben Sie dann Ihren Namen, Ihre E-Mail-Adresse und
                       den folgenden Gutscheincode ein:
-                      <span style="font-family: monospace"
-                        >{{GRANT_VOUCHER_CODE}}</span
+                      <span style="font-family: monospace">{{GRANT_VOUCHER_CODE}}</span
                       >. Der Gutscheincode ist gültig bis zum
                       {{GRANT_BEGIN_BEFORE}}.
                     </p>
@@ -140,10 +130,7 @@
                     <p>
                       In diesem Fall ein Hinweis: Auch Sie können Ihre Freunde
                       und Feinde noch bis Ende März
-                      <a href="{{LINK_ACCOUNT_SHARE}}"
-                        >mit einem kostenlosen vierwöchigen Republik-Zugang
-                        beschenken</a
-                      >. Die Empfänger erhalten eine persönliche Einladung per
+                      <a href="{{LINK_ACCOUNT_SHARE}}">mit einem kostenlosen vierwöchigen Republik-Zugang beschenken</a>. Die Empfänger erhalten eine persönliche Einladung per
                       E-Mail.
                     </p>
                     <table
@@ -157,11 +144,7 @@
                           <table border="0" cellspacing="0" cellpadding="0">
                             <tr>
                               <td align="center" bgcolor="#3CAD00">
-                                <a
-                                  href="{{LINK_ACCOUNT_SHARE}}"
-                                  style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;"
-                                  >Zugang teilen</a
-                                >
+                                <a href="{{LINK_ACCOUNT_SHARE}}" style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;">Zugang teilen</a>
                               </td>
                             </tr>
                           </table>
@@ -171,9 +154,7 @@
                     {{/if}} {{/if}}
                     <p>
                       Bei Fragen und Anliegen stehen wir Ihnen gerne unter
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
                       zur Verfügung.
                     </p>
                     {{#unless RECIPIENT_HAS_MEMBERSHIPS}}
@@ -206,9 +187,7 @@
                       Republik AG<br />
                       Sihlhallenstrasse 1, CH-8004 Zürich<br />
                       <a href="{{frontend_base_url}}">www.republik.ch</a><br />
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
                     </p>
                   </td>
                 </tr>
