--- a/packages/backend-modules/mail/templates/comment_notification_new.html
+++ b/packages/backend-modules/mail/templates/comment_notification_new.html
@@ -47,8 +47,7 @@
                     <p
                       style="color:#282828;font-size:17px;line-height:24px;{{sg_font_style_sans_serif_regular}}"
                     >
-                      <strong style="{{sg_font_style_sans_serif_medium}}"
-                        >{{COMMENTER_NAME}}</strong
+                      <strong style="{{sg_font_style_sans_serif_medium}}">{{COMMENTER_NAME}}</strong
                       >
                       schreibt:
                     </p>
@@ -69,9 +68,7 @@
                     <p
                       style="color:#282828;font-size:17px;line-height:24px;{{sg_font_style_sans_serif_regular}}"
                     >
-                      <a href="{{URL}}"
-                        >Den Beitrag im Kontext auf republik.ch anzeigen</a
-                      >. Dort können Sie antworten und weiter debattieren.<br />
+                      <a href="{{URL}}">Den Beitrag im Kontext auf republik.ch anzeigen</a>. Dort können Sie antworten und weiter debattieren.<br/>
                     </p>
                   </td>
                 </tr>
@@ -80,23 +77,16 @@
                     <p
                       style="color:#282828;font-size:14px;line-height:20px;{{sg_font_style_sans_serif_regular}}"
                     >
-                      Sie erhalten diese E-Mail, weil Sie an der Debatte «<a
-                        href="{{DISCUSSION_URL}}"
-                        >{{DISCUSSION_TITLE}}</a
-                      >» teilgenommen haben und/oder Benachrichtigungen für
+                      Sie erhalten diese E-Mail, weil Sie an der Debatte «<a href="{{DISCUSSION_URL}}">{{DISCUSSION_TITLE}}</a>» teilgenommen haben und/oder Benachrichtigungen für
                       diese abonniert haben.
                     </p>
                     <p
                       style="color:#282828;font-size:14px;line-height:20px;{{sg_font_style_sans_serif_regular}}"
                     >
                       Hier können Sie die
-                      <a href="{{DISCUSSION_MUTE_URL}}"
-                        >Benachrichtigungen zu dieser Debatte deaktivieren</a
-                      >. Und falls Sie gar keine Benachrichtigungen per E-Mail
+                      <a href="{{DISCUSSION_MUTE_URL}}">Benachrichtigungen zu dieser Debatte deaktivieren</a>. Und falls Sie gar keine Benachrichtigungen per E-Mail
                       mehr erhalten möchten, können Sie dies in
-                      <a href="{{link_account_notifications}}"
-                        >Ihrem Konto festlegen</a
-                      >.
+                      <a href="{{link_account_notifications}}">Ihrem Konto festlegen</a>.
                     </p>
                   </td>
                 </tr>
@@ -121,9 +111,7 @@
                       Republik AG<br />
                       Sihlhallenstrasse 1, CH-8004 Zürich<br />
                       <a href="{{frontend_base_url}}">www.republik.ch</a><br />
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
                     </p>
                   </td>
                 </tr>
