--- a/packages/backend-modules/mail/templates/membership_claimer_onboarding.html
+++ b/packages/backend-modules/mail/templates/membership_claimer_onboarding.html
@@ -59,28 +59,18 @@
                     {{/if}}
                     <p>
                       Sie erhalten also weiterhin von Montag bis Samstag ein
-                      <a href="{{link_signin}}"
-                        >hochwertiges digitales Magazin</a
-                      >, können an
-                      <a href="{{link_dialog}}"
-                        >sämtlichen Debatten teilnehmen</a
-                      >
+                      <a href="{{link_signin}}">hochwertiges digitales Magazin</a>, können an
+                      <a href="{{link_dialog}}">sämtlichen Debatten teilnehmen</a>
                       und die Republik
-                      <a href="{{link_account_share}}"
-                        >mit Ihren Freunden oder Feinden teilen</a
-                      >.
+                      <a href="{{link_account_share}}">mit Ihren Freunden oder Feinden teilen</a>.
                     </p>
                     {{else}}
                     <p>
                       Sie können ab sofort
                       <a href="{{link_signin}}">das Magazin lesen</a>, an
-                      <a href="{{link_dialog}}"
-                        >sämtlichen Debatten teilnehmen</a
-                      >
+                      <a href="{{link_dialog}}">sämtlichen Debatten teilnehmen</a>
                       und die Republik
-                      <a href="{{link_account_share}}"
-                        >mit Ihren Freunden oder Feinden teilen</a
-                      >.
+                      <a href="{{link_account_share}}">mit Ihren Freunden oder Feinden teilen</a>.
                     </p>
                     {{/if}}
                     
@@ -109,9 +99,7 @@
                       Republik AG<br />
                       Sihlhallenstrasse 1, CH-8004 Zürich<br />
                       <a href="{{frontend_base_url}}">www.republik.ch</a><br />
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
                     </p>
                   </td>
                 </tr>
