--- a/packages/backend-modules/mail/templates/membership_deactivated_benefactor_abo_uncancelled.html
+++ b/packages/backend-modules/mail/templates/membership_deactivated_benefactor_abo_uncancelled.html
@@ -52,11 +52,7 @@
                           <table border="0" cellspacing="0" cellpadding="0">
                             <tr>
                               <td align="center" bgcolor="#3CAD00">
-                                <a
-                                  href="{{prolong_url}}"
-                                  style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;"
-                                  >Mitgliedschaft jetzt reaktivieren</a
-                                >
+                                <a href="{{prolong_url}}" style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;">Mitgliedschaft jetzt reaktivieren</a>
                               </td>
                             </tr>
                           </table>
@@ -92,11 +88,7 @@
                           <table border="0" cellspacing="0" cellpadding="0">
                             <tr>
                               <td align="center" bgcolor="#3CAD00">
-                                <a
-                                  href="{{prolong_url}}"
-                                  style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;"
-                                  >Jetzt erneuern</a
-                                >
+                                <a href="{{prolong_url}}" style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;">Jetzt erneuern</a>
                               </td>
                             </tr>
                           </table>
@@ -114,17 +106,13 @@
                       Sollte uns hingegen ein Fehler unterlaufen sein, nehmen
                       Sie bitte ebenfalls so schnell wie möglich Kontakt mit uns
                       auf:
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >.
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>.
                     </p>
                     <p>
                       Wir würden uns freuen, Sie ein weiteres Jahr an Bord zu
                       wissen. Und wenn Sie sich dagegen entscheiden, würden wir
                       uns freuen, wenn Sie zu einem
-                      <a href="{{prolong_url}}"
-                        >späteren Zeitpunkt wieder vorbeischauten</a
-                      >.
+                      <a href="{{prolong_url}}">späteren Zeitpunkt wieder vorbeischauten</a>.
                     </p>
                     <p>Herzlich</p>
                     <p>Ihre Crew der Republik</p>
@@ -151,9 +139,7 @@
                       Republik AG<br />
                       Sihlhallenstrasse 1, CH-8004 Zürich<br />
                       <a href="{{frontend_base_url}}">www.republik.ch</a><br />
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
                     </p>
                   </td>
                 </tr>
