--- a/packages/backend-modules/mail/templates/membership_deactivated_yearly_abo_uncancelled.html
+++ b/packages/backend-modules/mail/templates/membership_deactivated_yearly_abo_uncancelled.html
@@ -67,11 +67,7 @@
                           <table border="0" cellspacing="0" cellpadding="0">
                             <tr>
                               <td align="center" bgcolor="#3CAD00">
-                                <a
-                                  href="{{link_offers_overview}}"
-                                  style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;"
-                                  >Jetzt an Bord bleiben</a
-                                >
+                                <a href="{{link_offers_overview}}" style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;">Jetzt an Bord bleiben</a>
                               </td>
                             </tr>
                           </table>
@@ -83,17 +79,13 @@
                       es nicht liegen. Journalismus kostet zwar, doch wir wollen
                       niemanden ausschliessen. Wenn Sie einen finanziellen
                       Engpass haben sollten, können Sie eine
-                      <a href="{{link_offer_reduced}}"
-                        >Mitgliedschaft zu einem tieferen Preis abschliessen</a
-                      >.
+                      <a href="{{link_offer_reduced}}">Mitgliedschaft zu einem tieferen Preis abschliessen</a>.
                     </p>
                     <p>
                       Vielleicht liegt das Missverständnis auch auf unserer
                       Seite: Sollte uns ein Fehler unterlaufen sein, nehmen Sie
                       bitte so schnell wie möglich Kontakt mit uns auf:
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >.
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>.
                     </p>
                     <p>
                       Wir würden uns freuen, Sie ein weiteres Jahr an Bord zu
@@ -126,9 +118,7 @@
                       Republik AG<br />
                       Sihlhallenstrasse 1, CH-8004 Zürich<br />
                       <a href="{{frontend_base_url}}">www.republik.ch</a><br />
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
                     </p>
                   </td>
                 </tr>
