--- a/packages/backend-modules/mail/templates/membership_owner_prolong_yearly_abo_winback_16.html
+++ b/packages/backend-modules/mail/templates/membership_owner_prolong_yearly_abo_winback_16.html
@@ -1023,11 +1023,7 @@
 													<tbody>
 														<tr>
 															<td align="center" width="100%">
-																<a
-																	href="https://www.republik.ch/angebote?package=ABO&userPrice=1&price=12000&reason=Zurueck-zur-Republik-Angebot&utm_campaign=mitstreiter">
-																	<strong>Ein Jahr Republik für CHF
-																		120</strong>
-																</a>
+																<a href="https://www.republik.ch/angebote?package=ABO&userPrice=1&price=12000&reason=Zurueck-zur-Republik-Angebot&utm_campaign=mitstreiter"><strong>Ein Jahr Republik für CHF 120</strong></a>
 															</td>
 														</tr>
 													</tbody>
@@ -1079,17 +1075,11 @@
 										<td valign="top" id="footerContent">
 											<div><strong>PS: Falls einer der oben
 													genannten Gründe zutreffen sollte, sind hier ein paar nützliche
-													Republik-Beiträge: <a
-														href="https://www.republik.ch/2020/09/28/sollten-sie-vater-werden-lesen-sie-diesen-beitrag">ein
-														Survival-Guide für den Vaterschaftsurlaub</a>, <a
-														href="https://www.republik.ch/2024/01/16/die-politik-der-freundschaft">Freundschaft ist
-														politisch</a> und <a href="https://www.republik.ch/format/sommerfragebogen">unpassende Namen
-														für Haustiere</a>.</strong><br>
+													Republik-Beiträge: <a href="https://www.republik.ch/2020/09/28/sollten-sie-vater-werden-lesen-sie-diesen-beitrag">ein Survival-Guide für den Vaterschaftsurlaub</a>, 
+                          <a href="https://www.republik.ch/2024/01/16/die-politik-der-freundschaft">Freundschaft ist politisch</a> und 
+                          <a href="https://www.republik.ch/format/sommerfragebogen">unpassende Namen für Haustiere</a>.</strong><br>
 												<br>
-												<a href="https://www.republik.ch/" target="_blank" title="Im Web lesen"><img alt="REPUBLIK"
-														height="79" src="https://www.republik.ch/static/logo_republik_newsletter.png"
-														style="border:0;width:178px !important;height:79px !important;margin:0;max-width:100% !important"
-														width="178"></a>
+												<a href="https://www.republik.ch/" target="_blank" title="Im Web lesen"><img alt="REPUBLIK"	height="79" src="https://www.republik.ch/static/logo_republik_newsletter.png"	style="border:0;width:178px !important;height:79px !important;margin:0;max-width:100% !important" width="178"></a>
 
 												<p>Republik AG<br>
 													Sihlhallenstrasse 1<br>
