--- a/packages/backend-modules/mail/templates/membership_owner_upgrade_monthly.html
+++ b/packages/backend-modules/mail/templates/membership_owner_upgrade_monthly.html
@@ -75,11 +75,7 @@
                           <table border="0" cellspacing="0" cellpadding="0">
                             <tr>
                               <td align="center" bgcolor="#3CAD00">
-                                <a
-                                  href="{{link_account_abos_goto}}"
-                                  style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;"
-                                  >Zur Jahresmitgliedschaft wechseln</a
-                                >
+                                <a href="{{link_account_abos_goto}}" style="font-size:20px;{{sg_font_style_sans_serif_regular}}color:#ffffff;text-decoration:none;border-radius:0;padding:15px 30px 15px 30px;border:1px solid #3CAD00;display:inline-block;">Zur Jahresmitgliedschaft wechseln</a>
                               </td>
                             </tr>
                           </table>
@@ -120,9 +116,7 @@
                       Feedback geben oder Vorschläge machen, Kritik loswerden
                       und Fragen stellen. Brauchen Sie technische Unterstützung
                       oder funktioniert etwas nicht, wenden Sie sich direkt an
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >.
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>.
                     </p>
 
                     <p>Vielen Dank für Ihre Unterstützung!</p>
@@ -157,9 +151,7 @@
                       Republik AG<br />
                       Sihlhallenstrasse 1, CH-8004 Zürich<br />
                       <a href="{{frontend_base_url}}">www.republik.ch</a><br />
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
                     </p>
                   </td>
                 </tr>
