--- a/packages/backend-modules/mail/templates/payment_reminder_last_benefactor.html
+++ b/packages/backend-modules/mail/templates/payment_reminder_last_benefactor.html
@@ -71,9 +71,7 @@
                       Sollte sich Ihre Zahlung mit dieser Zahlungserinnerung
                       kreuzen, erachten Sie unsere E-Mail als gegenstandslos.
                       Haben Sie sonst Fragen, melden Sie sich jederzeit unter
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >.
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>.
                     </p>
                     <p>Herzlich<br />Ihre Crew der Republik</p>
                   </td>
@@ -99,9 +97,7 @@
                       Republik AG<br />
                       Sihlhallenstrasse 1, CH-8004 Zürich<br />
                       <a href="{{frontend_base_url}}">www.republik.ch</a><br />
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
                     </p>
                   </td>
                 </tr>
