--- a/packages/backend-modules/mail/templates/payment_reminder_last_yearly_abo.html
+++ b/packages/backend-modules/mail/templates/payment_reminder_last_yearly_abo.html
@@ -68,9 +68,7 @@
                       Sollte sich Ihre Zahlung mit dieser Zahlungserinnerung
                       kreuzen, erachten Sie unsere E-Mail als gegenstandslos.
                       Haben Sie sonst Fragen, melden Sie sich jederzeit unter
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >.
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>.
                     </p>
                     <p>
                       Wenn wir Ihre Zahlung in den nächsten 30 Tagen nicht
@@ -101,9 +99,7 @@
                       Republik AG<br />
                       Sihlhallenstrasse 1, CH-8004 Zürich<br />
                       <a href="{{frontend_base_url}}">www.republik.ch</a><br />
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
                     </p>
                   </td>
                 </tr>
