--- a/packages/backend-modules/mail/templates/pledge_abo_give.html
+++ b/packages/backend-modules/mail/templates/pledge_abo_give.html
@@ -103,8 +103,7 @@
                     {{/if}} {{/if}} {{#if hasAnyGrantedMemberships}} {{#if
                     hasOneGrantedMemberships}}
                     <p>
-                      <strong
-                        >Vielen Dank, dass Sie die Verbreitung der Republik
+                      <strong>Vielen Dank, dass Sie die Verbreitung der Republik
                         {{#if voucher_codes}}zusätzlich {{/if}}mit einer
                         Wachstums-Mitgliedschaft unterstützen!</strong
                       >
@@ -116,8 +115,7 @@
                     </p>
                     {{/if}} {{#if hasMultipleGrantedMemberships}}
                     <p>
-                      <strong
-                        >Vielen Dank, dass Sie die Verbreitung der Republik
+                      <strong>Vielen Dank, dass Sie die Verbreitung der Republik
                         {{#if voucher_codes}}zusätzlich {{/if}}mit gleich
                         mehreren Wachstums-Mitgliedschaften
                         unterstützen!</strong
@@ -131,8 +129,7 @@
                     </p>
                     {{/if}} {{/if}} {{#if waiting_for_payment}}
                     <p>
-                      <strong
-                        >Da der Gesamtbetrag Ihrer Bestellung die magische
+                      <strong>Da der Gesamtbetrag Ihrer Bestellung die magische
                         Grenze von CHF 1000 übersteigt, schicken wir Ihnen die
                         Gutscheincodes erst nach Zahlungseingang.</strong
                       >
@@ -183,9 +180,7 @@
                       Republik AG<br />
                       Sihlhallenstrasse 1, CH-8004 Zürich<br />
                       <a href="{{frontend_base_url}}">www.republik.ch</a><br />
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
                     </p>
                   </td>
                 </tr>
