--- a/packages/backend-modules/mail/templates/pledge_monthly_abo.html
+++ b/packages/backend-modules/mail/templates/pledge_monthly_abo.html
@@ -54,22 +54,16 @@
                     <p>
                       Unter
                       <a href="{{link_account_goto}}">Konto</a> finden Sie Ihre
-                      <a href="{{link_account_abos_goto}}"
-                        >persönliche Übersicht zu Ihrem Abonnement</a
-                      >. Am gleichen Ort können Sie alle Einstellungen vornehmen
+                      <a href="{{link_account_abos_goto}}">persönliche Übersicht zu Ihrem Abonnement</a>. Am gleichen Ort können Sie alle Einstellungen vornehmen
                       (z. B. Kreditkarteninformationen ändern) oder das Abo
                       jederzeit kündigen.
                     </p>
                     <p>
                       Sie können ab sofort
                       <a href="{{link_signin}}">das Magazin lesen</a>, an
-                      <a href="{{link_dialog}}"
-                        >sämtlichen Debatten teilnehmen</a
-                      >
+                      <a href="{{link_dialog}}">sämtlichen Debatten teilnehmen</a>
                       und die Republik
-                      <a href="{{link_account_share}}"
-                        >mit Ihren Freunden oder Feinden teilen</a
-                      >.
+                      <a href="{{link_account_share}}">mit Ihren Freunden oder Feinden teilen</a>.
                     </p>
                     <p>Viel Vergnügen beim Start mit der Republik.</p>
                     <p>Ihre Crew der Republik</p>
@@ -96,9 +90,7 @@
                       Republik AG<br />
                       Sihlhallenstrasse 1, CH-8004 Zürich<br />
                       <a href="{{frontend_base_url}}">www.republik.ch</a><br />
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
                     </p>
                   </td>
                 </tr>
