--- a/packages/backend-modules/mail/templates/signin_code.html
+++ b/packages/backend-modules/mail/templates/signin_code.html
@@ -81,9 +81,7 @@
                     <p>
                       Wenn Sie diese E-Mail öfters unaufgefordert erhalten,
                       wenden Sie sich bitte an
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >.
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>.
                     </p>
                     <p>Herzlich</p>
                     <p>Ihre Crew der Republik</p>
@@ -110,9 +108,7 @@
                       Republik AG<br />
                       Sihlhallenstrasse 1, CH-8004 Zürich<br />
                       <a href="{{frontend_base_url}}">www.republik.ch</a><br />
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
                     </p>
                   </td>
                 </tr>
