--- a/packages/backend-modules/mail/templates/subscription_failed.html
+++ b/packages/backend-modules/mail/templates/subscription_failed.html
@@ -70,9 +70,7 @@
                     </p>
                     <p>
                       Haben Sie Fragen? Unter
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
                       helfen wir Ihnen gerne weiter.
                     </p>
                     <p>
@@ -102,9 +100,7 @@
                       Republik AG<br />
                       Sihlhallenstrasse 1, CH-8004 Zürich<br />
                       <a href="{{frontend_base_url}}">www.republik.ch</a><br />
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>
                     </p>
                   </td>
                 </tr>
